<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/FlyItLogo"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:src="@mipmap/ic_launcher_plane_foreground"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/email_login"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/FlyItLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:ems="12"
        android:drawableLeft="@drawable/ic_action_email"
        android:background="#11000000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignLeft="@id/email_login"
        android:layout_alignRight="@id/email_login"
        android:layout_below="@id/email_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/password_login"
        android:ems="12"
        android:drawableLeft="@drawable/ic_action_password"
        android:background="#11000000"
        android:textSize="20dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button"
        android:layout_height="35dp"
        android:layout_width="wrap_content"
        android:text="@string/login_page_login_button"
        android:layout_alignRight="@id/password_login"
        android:layout_alignLeft="@id/password_login"
        android:layout_below="@id/password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#854D77"
        android:textColor="#EFEFEF"
        />

    <TextView
        android:id="@+id/RegisterMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page_register_message"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        />

</RelativeLayout>