<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/FlyItLogoRegisterPage"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginTop="65dp"
        app:srcCompat="@drawable/flyitlogopicture"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/email_register"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/FlyItLogoRegisterPage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:hint="@string/register_page_insert_email"
        android:inputType="textEmailAddress"
        android:ems="12"
        android:drawableLeft="@drawable/ic_action_email"
        android:background="#11000000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/email_register_repeat"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignLeft="@id/email_register"
        android:layout_alignRight="@id/email_register"
        android:layout_below="@id/email_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/register_page_repeat_email"
        android:inputType="textEmailAddress"
        android:ems="12"
        android:drawableLeft="@drawable/ic_action_email"
        android:background="#11000000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignLeft="@id/email_register_repeat"
        android:layout_alignRight="@id/email_register_repeat"
        android:layout_below="@id/email_register_repeat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/register_page_insert_password"
        android:ems="12"
        android:drawableLeft="@drawable/ic_action_password"
        android:background="#11000000"
        android:textSize="20dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/password_register_repeat"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignLeft="@id/password_register"
        android:layout_alignRight="@id/password_register"
        android:layout_below="@id/password_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/register_page_repeat_password"
        android:ems="12"
        android:drawableLeft="@drawable/ic_action_password"
        android:background="#11000000"
        android:textSize="20dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/register_button"
        android:layout_height="35dp"
        android:layout_width="wrap_content"
        android:text="@string/register_page_register_button"
        android:layout_alignRight="@id/password_register_repeat"
        android:layout_alignLeft="@id/password_register_repeat"
        android:layout_below="@id/password_register_repeat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#854D77"
        android:textColor="#EFEFEF"
        />

    <TextView
        android:id="@+id/RegisterMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_page_login_message"
        android:layout_below="@id/register_button"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/RegisterMessage"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@+id/FlyItLogoRegisterPage"
        android:layout_alignStart="@+id/FlyItLogoRegisterPage"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/facebook_logo"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/github_logo"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/github" />

        <ImageView
            android:id="@+id/discord_logo"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/discord" />
    </LinearLayout>



</RelativeLayout>